<resources>
    <string name="app_name">WorkoutPlanner</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- End Strings related to login -->

    <string name="error_field_required">This field is required</string>
    <string name="title_activity_home">Workouts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WorkoutPlanner</string>
    <string name="nav_header_subtitle">Get your health back on track</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_workout_name">Workout name</string>
    <string name="num_exercises">Exercises: %1$d</string>
    <string name="btn_schedule">Schedule</string>
    <string name="txt_create_workout_header">Create new workout</string>
    <string name="btn_save">Save workout</string>
    <string name="txt_exercises_sub_header">Exercises</string>
    <string name="btn_add_exercise">Add exercise</string>
    <string name="create_new_exercise_header">Create new exercise</string>
    <string name="select_existing_exercise_header">OR select existing exercise</string>
    <string name="complete_workou_header">Complete workout</string>
    <string name="action_history">History</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_full_name">Full name</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="jwt_token">JwtToken</string>
    <string name="refresh_token">refresh_token</string>
    <string name="scheduled_workouts_empty_list_text">No workouts scheduled</string>
    <string name="created_workouts_empty_list_text">No workouts created yet</string>
    <string name="created_exercises_empty_list_text">No exercises created yet</string>
    <string name="done_workouts_empty_list_text">No workouts completed yet</string>
    <string name="selectable_exercises_empty_list_text">No exercises created yet</string>
    <string name="finish_workout_prompt">Finish workout</string>
    <string name="finish_workout_question">Are you sure you want to mark this workout as finished?</string>
    <string name="error_api_not_available">Network service not available</string>
    <string name="error_unknown_error">Unknown error occurred</string>
</resources>
